My Account Module Completed Partially

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
             android:parentActivityName=".Database"/>
         <activity android:name=".MainFragment"
             android:parentActivityName=".Database"/>
+        <activity android:name=".DisplayImage"/>
     </application>
 
 </manifest>
