--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,22 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.myapp.finance">
 
-    <!-- To auto-complete the email text field in the login form with the user's emails -->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.INTERNET" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label= "@string/app_name"
-        android:usesCleartextTraffic="true"
+        android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".VerifyPhoneNumber"/>
         <activity android:name=".Database">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,18 +20,21 @@
         </activity>
         <activity
             android:name=".Register"
-            android:parentActivityName=".login"/>
+            android:parentActivityName=".login" />
         <activity
             android:name=".display"
             android:parentActivityName=".Database" />
         <activity android:name=".login" />
-        <activity android:name=".Account_Details"
-            android:parentActivityName=".Database"/>
-        <activity android:name=".FlowTracker"
-            android:parentActivityName=".Database"/>
-        <activity android:name=".MainFragment"
-            android:parentActivityName=".Database"/>
-        <activity android:name=".DisplayImage"/>
+        <activity
+            android:name=".Account_Details"
+            android:parentActivityName=".Database" />
+        <activity
+            android:name=".FlowTracker"
+            android:parentActivityName=".Database" />
+        <activity
+            android:name=".MainFragment"
+            android:parentActivityName=".Database" />
+        <activity android:name=".DisplayImage" />
     </application>
 
 </manifest>
